--- a/BilibiliVedioSpider/BilibiliVedioSpider.csproj
+++ b/BilibiliVedioSpider/BilibiliVedioSpider.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
